--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,10 +40,10 @@
       </div>
     </div>
     <div class="col-sm">
-      <h1>businesses instantly for free</h1>
+      <h1 style="color:#FF0000">Businesses instantly for free</h1>
     </div>
     <div class="col-sm">
-      <h1>Pay your friend for free</h1>
+      <h1 style="color:#0000FF">Pay your friend for free</h1>
     </div>
   </div>
 </div>
