--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <h1 style="color:#FF0000">Businesses instantly for free</h1>
+      <h1 style="color:#00FF00">Businesses instantly for free</h1>
     </div>
     <div class="col-sm">
       <h1 style="color:#0000FF">Pay your friend for free</h1>
