--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,21 +8,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Personal <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Personal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Business</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Personal</a>
-          <a class="dropdown-item" href="#">Business</a>
-          <a class="dropdown-item" href="#">What's New</a>
-          <a class="dropdown-item" href="#">Need Help</a>
-        </div>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">What's New</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Help</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Download</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
