--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Personal</a>
+        <a class="nav-link" routerLink="/personal">Personal</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Business</a>
+        <a class="nav-link" routerLink="/business">Business</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">What's New</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Help</a>
+        <a class="nav-link" href="/help">Help</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Download</a>
+        <a class="nav-link" href="/download">Download</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -30,7 +30,7 @@
   </div>
 </nav>
 
-<div class="container">
+<!--div class="container">
   <div class="row">
     <div class="col-sm">
       <div class="embed-responsive embed-responsive-16by9">
@@ -44,5 +44,5 @@
       <h1 style="color:#0000FF">Pay your friend for free</h1>
     </div>
   </div>
-</div>
+</div-->
 <router-outlet></router-outlet>
