added download icons

--- a/src/app/downloadpayme/downloadpayme.component.html
+++ b/src/app/downloadpayme/downloadpayme.component.html
@@ -1,3 +1,26 @@
-<p>
-  downloadpayme works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+          <h2 align="center">PayMe</h2>
+        </div>
+        <div class="col-sm">
+          <h2 align="center">PayMe for Business</h2>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <h2>Pay friends and businesses instantly for free</h2>
+      </div>
+      <div class="col-sm">
+        <h2>Collect payments instantly from over a million PayMe customers</h2>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+          <img src="assets/images/app_icon_personal.png" class="mx-auto d-block">
+        </div>
+        <div class="col-sm">
+          <img src="assets/images/app_icon_business.png" class="mx-auto d-block">
+        </div>
+    </div>
+</div>
