--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,20 +7,20 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLink="/personal">Personal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/business">Business</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">What's New</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/whatsnew">What's New</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/help">Help</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/help">Help</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/download">Download</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/download">Download</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
