--- a/src/app/downloadpayme/downloadpayme.component.html
+++ b/src/app/downloadpayme/downloadpayme.component.html
@@ -19,15 +19,15 @@
         <div class="col-sm">
           <img src="assets/images/app_icon_personal.png" class="mx-auto d-block">
           <div class="row">
-            <div class="col-sm">
-              <a href="https://itunes.apple.com/app/id1184264977?mt=8">
-                <img alt="Get it on App Store" src="/assets/images/ios.png">
-              </a>
-            </div>
-            <div class="col-sm">
-              <a href="https://play.google.com/store/apps/details?id=hk.com.hsbc.paymefromhsbc">
-                <img alt="Get it on Google Play" src="/assets/images/android.png">
-              </a>
+              <div class="col-sm">
+                <a class="float-left" href="https://itunes.apple.com/app/id1184264977?mt=8">
+                  <img alt="Get it on App Store" src="/assets/images/ios.png">
+                </a>
+              </div>
+              <div class="col-sm">
+                <a class="float-right" href="https://play.google.com/store/apps/details?id=hk.com.hsbc.paymefromhsbc">
+                  <img alt="Get it on Google Play" src="/assets/images/android.png">
+                </a>
             </div>
           </div>
         </div>
@@ -35,14 +35,14 @@
           <img src="assets/images/app_icon_business.png" class="mx-auto d-block">
           <div class="row">
             <div class="col-sm">
-                <a href="https://itunes.apple.com/app/id1184264977?mt=8">
+                <a class="float-left" href="https://itunes.apple.com/app/id1184264977?mt=8">
                   <img alt="Get it on App Store" src="/assets/images/ios.png">
                 </a>
             </div>
             <div class="col-sm">
-              <a href="https://itunes.apple.com/hk/app/payme-for-business/id1443510263?ls=1&mt=8">
-                <img alt="Get it on Google Play" src="/assets/images/android.png">
-              </a>
+                <a class="float-right" href="https://itunes.apple.com/hk/app/payme-for-business/id1443510263?ls=1&mt=8">
+                  <img alt="Get it on Google Play" src="/assets/images/android.png">
+                </a>
             </div>
           </div>
         </div>
