--- a/src/app/downloadpayme/downloadpayme.component.html
+++ b/src/app/downloadpayme/downloadpayme.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-          <h2 align="center">PayMe</h2>
+          <h2 align="center">PayAll</h2>
         </div>
         <div class="col-sm">
-          <h2 align="center">PayMe for Business</h2>
+          <h2 align="center">PayAll for Business</h2>
         </div>
     </div>
     <div class="row">
       <div class="col-sm">
-        <h2>Pay friends and businesses instantly for free</h2>
+        <h2>Pay everyone instantly for free</h2>
       </div>
       <div class="col-sm">
-        <h2>Collect payments instantly from over a million PayMe customers</h2>
+        <h2>Collect payments instantly from tons of PayAll customers</h2>
       </div>
     </div>
     <div class="row">
