--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <h1 style="color:#00FF00">Pay friends and businesses instantly for free</h1>
+      <h1 style="color:#00FF00">Pay everyone for free</h1>
     </div>
   </div>
 </div>
