--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <h1 style="color:#00FF00">PayMe for Business is here!</h1>
+      <h1 style="color:#00FF00">PayAll for Business is here!</h1>
     </div>
   </div>
 </div>
