--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -4,14 +4,20 @@
     </div>
     <div class="col-sm">
       <p>
-        Do I need to be an HSBC customer to use PayMe?
-        No, you do not need to be a HSBC customer to use PayMe. Although PayMe is from HSBC, you can use it to send money to anyone in Hong Kong instantly and for free, no matter which local bank you use. However, in accordance with the Stored Value Facilities (SVF) license PayMe operates under, you will need to meet a few criteria in order to be eligible to use PayMe. You must:
+        Do I need to be an BOA customer to use PayAll?
+        No, you do not need to be a BOA customer to use PayAll. Although PayAll is from BOA, 
+        you can use it to send money to anyone in Hong Kong instantly and for free, 
+        no matter which local bank you use. However, in accordance with the 
+        Stored Value Facilities (SVF) license PayMe operates under, you will need to meet 
+        a few criteria in order to be eligible to use PayMe. You must:
         
-        • Aged 18 or above when registering PayMe app; AND
+        • Aged 18 or above when registering PayAll app; AND
         • Have a valid Hong Kong Identity Card; AND
         • Have a valid Visa or MasterCard credit card*
         
-        *A Visa or MasterCard single currency Hong Kong dollar personal credit card issued by a licensed bank incorporated in Hong Kong. Corporate, business, private label, dual currency and UnionPay cards are not eligible for usage with PayMe.
+        *A Visa or MasterCard single currency Hong Kong dollar personal credit card issued by 
+        a licensed bank incorporated in Hong Kong. Corporate, business, private label, 
+        dual currency and UnionPay cards are not eligible for usage with PayAll.
       </p>
     </div>
     <div class="col-sm">
