--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://payme.hsbc.com.hk/assets/home/HSBC_PayMe_home.mp4" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/U4RiGlJ2qkQ?rel=0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="col-sm">
